@@ -3,7 +3,7 @@
 /*
  * LMS version 1.11-git
  *
- *  (C) Copyright 2001-2013 LMS Developers
+ *  (C) Copyright 2001-2016 LMS Developers
  *
  *  Please, see the doc/AUTHORS for more information about authors!
  *
@@ -36,68 +36,77 @@ else
 	$js = '';
 
 if (isset($_POST['netid']))
-    $netid = $_POST['netid'];
+	$netid = $_POST['netid'];
 elseif (isset($_GET['netid']))
-    $netid = $_GET['netid'];
+	$netid = $_GET['netid'];
 elseif ($SESSION->is_set('netid'))
-    $SESSION->restore('netid', $netid);
+	$SESSION->restore('netid', $netid);
 else
-    $netid = $networks[0]['id'];
+	$netid = $networks[0]['id'];
 
 if (isset($_POST['page']))
-    $page = $_POST['page'];
+	$page = $_POST['page'];
 elseif (isset($_GET['page']))
-    $page = $_GET['page'];
-elseif($SESSION->is_set('ntlp.page.'.$netid))
-    $SESSION->restore('ntlp.page.'.$netid, $page);
-else
-{
-    $page = 1;
-    $firstfree = true;
+	$page = $_GET['page'];
+elseif ($SESSION->is_set('ntlp.page.'.$netid))
+	$SESSION->restore('ntlp.page.'.$netid, $page);
+else {
+	$page = 1;
+	$firstfree = true;
 }
+
+if (isset($_POST['ip']))
+	$ip = $_POST['ip'];
+elseif (isset($_GET['ip']))
+	$ip = $_GET['ip'];
+else
+	$ip = null;
 
 $network = array();
 
-switch($p)
-{
+switch ($p) {
 	case 'main':
-		$network = $LMS->GetNetworkRecord($netid, $page, 
-			ConfigHelper::getConfig('phpui.networkhosts_pagelimit'), 
+		if (!empty($ip))
+			$page = $LMS->GetNetworkPageForIp($netid, $ip);
+
+		$network = $LMS->GetNetworkRecord($netid, $page,
+			ConfigHelper::getConfig('phpui.networkhosts_pagelimit'),
 			isset($firstfree) ? true : false);
 
 		$page = $network['page'];
-		$SESSION->save('ntlp.pages.'.$netid, $network['pages']);
-		$SESSION->save('ntlp.page.'.$netid, $page);
-	break;
+
+		$SESSION->save('ntlp.pages.' . $netid, $network['pages']);
+		$SESSION->save('ntlp.page.' . $netid, $page);
+		break;
 	case 'top':
-		$SESSION->save('ntlp.page.'.$netid, $page);
-	break;
+		$SESSION->save('ntlp.page.' . $netid, $page);
+		break;
 	case 'down':
-		$SESSION->restore('ntlp.page.'.$netid, $network['page']);
-		$SESSION->restore('ntlp.pages.'.$netid, $network['pages']);
-		if(!isset($network['pages'])) 
-		{
-			$network = $LMS->GetNetworkRecord($netid, $page, 
+		$SESSION->restore('ntlp.page.' . $netid, $network['page']);
+		$SESSION->restore('ntlp.pages.' . $netid, $network['pages']);
+		if (!isset($network['pages'])) {
+			$network = $LMS->GetNetworkRecord($netid, $page,
 				ConfigHelper::getConfig('phpui.networkhosts_pagelimit'),
 				isset($firstfree) ? true : false);
 		}
-		$SESSION->save('ntlp.pages.'.$netid, $network['pages']);
-		$SESSION->save('ntlp.page.'.$netid, $network['page']);
-	break;
+		$SESSION->save('ntlp.pages.' . $netid, $network['pages']);
+		$SESSION->save('ntlp.page.' . $netid, $network['page']);
+		break;
 	default:
-		if(!isset($firstfree))
-			$SESSION->save('ntlp.page.'.$netid, $page);
-	break;
+		if (!isset($firstfree))
+			$SESSION->save('ntlp.page.' . $netid, $page);
+		break;
 }
 
 $SESSION->save('netid', $netid);
 
-$SMARTY->assign('part',$p);
-$SMARTY->assign('js',$js);
-$SMARTY->assign('networks',$networks);
-$SMARTY->assign('network',$network);
-$SMARTY->assign('netid',$netid);
+$SMARTY->assign('part', $p);
+$SMARTY->assign('js', $js);
+$SMARTY->assign('networks', $networks);
+$SMARTY->assign('network', $network);
+$SMARTY->assign('netid', $netid);
 $SMARTY->assign('device', isset($_GET['device']) ? $_GET['device'] : NULL);
+$SMARTY->assign('ip', $ip);
 $SMARTY->display('choose/chooseip.html');
 
 ?>
