@@ -14,7 +14,7 @@
 {if ! $part}
 <frameset name="all" frameborder="0" framespacing="0" ROWS="65,*,27">
 	<frame scrolling="no" frameborder="0" marginheight="0" marginwidth="0" name="cal" noresize src="?m=chooseip&p=top{if $device}&device={$device}{/if}">
-	<frame scrolling="always" frameborder="0" marginheight="0" marginwidth="0" name="m" noresize src="?m=chooseip&p=main{if $device}&device={$device}{/if}">
+	<frame scrolling="always" frameborder="0" marginheight="0" marginwidth="0" name="m" noresize src="?m=chooseip&p=main{if $ip}&ip={$ip}{/if}{if $device}&device={$device}{/if}">
 	<frame scrolling="no" frameborder="0" marginheight="0" marginwidth="0" name="down" noresize src="?m=chooseip&p=down{if $device}&device={$device}{/if}">
 </frameset>
 {/if}
