@@ -65,7 +65,14 @@
 										{trans("IP address:")}
 									</td>
 									<td>
-										<input type="text" name="nodeeditipaddr" value="{$nodeinfo.ip}" required {tip text="Enter IP address" trigger="ipaddr"}> <a href="javascript: void(0);" onClick="return ipchoosewin(document.editnode.nodeeditipaddr, document.editnode.nodeeditnetid, {$nodeinfo.netid});" {tip text="Click to select IP from the list"}>&raquo;&raquo;&raquo;</A>
+										<input type="text" name="nodeeditipaddr" value="{$nodeinfo.ip}" required {tip text="Enter IP address" trigger="ipaddr"}>
+										<a href="javascript: void(0);" onClick="return ipchoosewin({
+												ipelem: document.editnode.nodeeditipaddr,
+												netelem: document.editnode.nodeeditnetid,
+												ip: document.editnode.nodeeditipaddr.value,
+												netid: document.editnode.nodeeditnetid.value
+											});" {tip text="Click to select IP from the list"}>&raquo;&raquo;&raquo;</A>
+										<br>
 										<a href="#" id="selectfirstfreeaddress">{trans("Select first free address")}</a>
 									</td>
 								</tr>
